Dropped two columns(emp_title, zip_code)
On analysis using value_counts() API and scanned thru these columns
found that maximum count is coming less than 1.5%. So dropping these
columns as it will not have much impact on current EDA process.

--- a/LendingClubCaseStudy.ipynb
+++ b/LendingClubCaseStudy.ipynb
@@ -718,6 +718,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(39717, 40)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#On analysis of the \"emp_title\", column with values_count(), we can see only two values are there which are having more than 100\n",
+    "#Overall % of these records is less than 1%. So by dropping them we will not have much impact on the EDA topic.\n",
+    "lendingDF.drop(['emp_title','zip_code'],axis=1,inplace=True)\n",
+    "lendingDF.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
