--- a/LendingClubCaseStudy.ipynb
+++ b/LendingClubCaseStudy.ipynb
@@ -718,16 +718,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(39717, 40)"
+       "(39717, 39)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,87 +741,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 39717 entries, 0 to 39716\n",
+      "Data columns (total 39 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   loan_amnt                39717 non-null  int64  \n",
+      " 1   funded_amnt              39717 non-null  int64  \n",
+      " 2   funded_amnt_inv          39717 non-null  float64\n",
+      " 3   term                     39717 non-null  object \n",
+      " 4   int_rate                 39717 non-null  object \n",
+      " 5   installment              39717 non-null  float64\n",
+      " 6   grade                    39717 non-null  object \n",
+      " 7   sub_grade                39717 non-null  object \n",
+      " 8   emp_length               38642 non-null  object \n",
+      " 9   home_ownership           39717 non-null  object \n",
+      " 10  annual_inc               39717 non-null  float64\n",
+      " 11  verification_status      39717 non-null  object \n",
+      " 12  issue_d                  39717 non-null  object \n",
+      " 13  loan_status              39717 non-null  object \n",
+      " 14  purpose                  39717 non-null  object \n",
+      " 15  title                    39706 non-null  object \n",
+      " 16  addr_state               39717 non-null  object \n",
+      " 17  dti                      39717 non-null  float64\n",
+      " 18  delinq_2yrs              39717 non-null  int64  \n",
+      " 19  earliest_cr_line         39717 non-null  object \n",
+      " 20  inq_last_6mths           39717 non-null  int64  \n",
+      " 21  open_acc                 39717 non-null  int64  \n",
+      " 22  pub_rec                  39717 non-null  int64  \n",
+      " 23  revol_bal                39717 non-null  int64  \n",
+      " 24  revol_util               39667 non-null  object \n",
+      " 25  total_acc                39717 non-null  int64  \n",
+      " 26  out_prncp                39717 non-null  float64\n",
+      " 27  out_prncp_inv            39717 non-null  float64\n",
+      " 28  total_pymnt              39717 non-null  float64\n",
+      " 29  total_pymnt_inv          39717 non-null  float64\n",
+      " 30  total_rec_prncp          39717 non-null  float64\n",
+      " 31  total_rec_int            39717 non-null  float64\n",
+      " 32  total_rec_late_fee       39717 non-null  float64\n",
+      " 33  recoveries               39717 non-null  float64\n",
+      " 34  collection_recovery_fee  39717 non-null  float64\n",
+      " 35  last_pymnt_d             39646 non-null  object \n",
+      " 36  last_pymnt_amnt          39717 non-null  float64\n",
+      " 37  last_credit_pull_d       39715 non-null  object \n",
+      " 38  pub_rec_bankruptcies     39020 non-null  float64\n",
+      "dtypes: float64(15), int64(8), object(16)\n",
+      "memory usage: 11.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "lendingDF.info()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "emp_length 1075\n",
+      "title 11\n",
+      "revol_util 50\n",
+      "last_pymnt_d 71\n",
+      "last_credit_pull_d 2\n",
+      "pub_rec_bankruptcies 697\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Findout columns which are having missing values\n",
+    "columnheaders = columnheaders = list(lendingDF.columns.values)\n",
+    "\n",
+    "for x in columnheaders:\n",
+    "    sum = lendingDF[x].isnull().sum()\n",
+    "    if sum > 0:\n",
+    "        print(x,sum)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Fill missing values in \"emp_length\" column\n",
+    "#Convert the data type into string\n",
+    "lendingDF['emp_length'] = lendingDF['emp_length'].astype(\"string\")\n",
+    "lendingDF['emp_length'] = lendingDF['emp_length'].fillna(lendingDF['emp_length'].mode()[0])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Fill missing values in \"revol_util\" column by converting into string and later using apply convert to float\n",
+    "lendingDF['revol_util'] = lendingDF['revol_util'].astype(\"string\")\n",
+    "lendingDF['revol_util'] = lendingDF['revol_util'].fillna(lendingDF['revol_util'].mode()[0])\n",
+    "lendingDF['revol_util'] = lendingDF['revol_util'].apply(lambda x: float(x[:-1]))\n",
+    "lendingDF['revol_util'].isnull().sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Fill missing values in 'title' column using mode method.(First convert to string and then used mode)\n",
+    "lendingDF['title'] = lendingDF['title'].astype(\"string\")\n",
+    "lendingDF['title'] = lendingDF['title'].fillna(lendingDF['title'].mode()[0])\n",
+    "lendingDF['title'].isnull().sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Fill missing values in 'last_pymnt_d' column using mode method.(First convert to string and then used mode)\n",
+    "lendingDF['last_pymnt_d'] = lendingDF['last_pymnt_d'].astype(\"string\")\n",
+    "lendingDF['last_pymnt_d'] = lendingDF['last_pymnt_d'].fillna(lendingDF['last_pymnt_d'].mode()[0])\n",
+    "lendingDF['last_pymnt_d'].isnull().sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Fill missing values in 'last_credit_pull_d' column using mode method.(First convert to string and then used mode)\n",
+    "lendingDF['last_credit_pull_d'] = lendingDF['last_credit_pull_d'].astype(\"string\")\n",
+    "lendingDF['last_credit_pull_d'] = lendingDF['last_credit_pull_d'].fillna(lendingDF['last_credit_pull_d'].mode()[0])\n",
+    "lendingDF['last_credit_pull_d'].isnull().sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(39020, 39)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Dropping rows having null values in column 'pub_rec_bankruptcies'\n",
+    "lendingDF = lendingDF[~(lendingDF['pub_rec_bankruptcies'].isnull())]\n",
+    "lendingDF['pub_rec_bankruptcies'].isnull().sum()\n",
+    "lendingDF.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -832,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
